# 42174-SmartTour

./: .gitignore  README.md  pyproject.toml
app/: next.config.ts  package.json  pnpm-lock.yaml
app/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
app/src/components/: RouteMap.tsx  ThemeProvider.tsx
app/src/lib/: googleMapsLoader.tsx  routeGeometry.tsx  smartourApi.tsx
scripts/: __init__.py  fetch_places.py  seed_database.py
smarttour/: __init__.py  config.py  logging_config.py
smarttour/api/: app.py  dependencies.py
smarttour/api/routers/: __init__.py  attractions.py  guidance.py  health.py  itinerary.py  preferences.py  routes.py
smarttour/db/: __init__.py  engine.py  seed.py
smarttour/models/: __init__.py  accommodation.py  attractions.py  distance_cache.py  itinerary.py  preferences.py  restaurant.py  session.py  transport.py  xhs_popularity.py
smarttour/services/: __init__.py  data_retrieval.py  guidance_generator.py  itinerary_generator.py  itinerary_planner.py  llm_client.py  maps_client.py  places_client.py  preference_parser.py  route_optimizer.py  xiaohongshu_client.py
smarttour/ui/: api_client.py  app.py
smarttour/ui/components/: __init__.py  day_selector.py  map_builder.py  preference_card.py  timeline.py
smarttour/ui/pages/: 01_preferences.py  02_itinerary.py  03_map.py  04_details.py  05_export.py
src/smartour/: __init__.py  main.py
src/smartour/api/: __init__.py  dependencies.py
src/smartour/api/routes/: __init__.py  conversations.py  google_maps.py  health.py  itineraries.py
src/smartour/application/: __init__.py  conversation_service.py  itinerary_job_service.py  planning_service.py  requirement_extractor.py
src/smartour/core/: __init__.py  config.py  errors.py
src/smartour/domain/: __init__.py  conversation.py  itinerary.py  itinerary_job.py  requirement.py
src/smartour/infrastructure/: __init__.py  database.py  google_api_store.py  rate_limit.py
src/smartour/infrastructure/repositories/: __init__.py  conversations.py  itineraries.py  itinerary_jobs.py
src/smartour/integrations/: __init__.py
tests/: __init__.py  test_conversation_service.py  test_google_maps_clients.py  test_itinerary_job_service.py  test_openai_requirement_extractor.py  test_planning_service.py  test_sqlite_persistence.py
(+11 files in other folders)
