[project]
name = "smartour"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openai>=2.32.0",
    "pydantic-settings>=2.14.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
smartour-api = "smartour.main:run"
smartour-google-maps-probe = "smartour.integrations.google_maps.probe:main"
smartour-openai-probe = "smartour.integrations.openai.probe:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["smartour*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]

[tool.ruff.lint]
select = ["E","F","UP","B","SIM","I"]

[tool.mypy]
disable_error_code = ["import-untyped"]
